--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "bear-market-hackathon",
+  "name": "filecoin-hackathon",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
