--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export"  
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
